--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Epic Event Management - Home</title>
+    <title>Epic Event Management - Services</title>
 </head>
 <body>
     <header>
@@ -19,10 +19,10 @@
     </header>
     
     <div class="container">
-        <h2>Welcome to Epic Event Management</h2>
-        <img src="img/1.jpg" alt="Event Image 1">
-        <img src="img/2.jpg" alt="Event Image 2">
-        <img src="img/3.jpg" alt="Event Image 3">
+        <h2>Our Services</h2>
+        <img src="img/7.jpg" alt="Service Image 1">
+        <img src="img/8.jpg" alt="Service Image 2">
+        <img src="img/9.jpg" alt="Service Image 3">
     </div>
     
     <footer>
