--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Epic Event Management - Home</title>
+    <title>Epic Event Management - About Us</title>
 </head>
 <body>
     <header>
@@ -19,10 +19,10 @@
     </header>
     
     <div class="container">
-        <h2>Welcome to Epic Event Management</h2>
-        <img src="img/1.jpg" alt="Event Image 1">
-        <img src="img/2.jpg" alt="Event Image 2">
-        <img src="img/3.jpg" alt="Event Image 3">
+        <h2>About Us</h2>
+        <img src="img/4.jpg" alt="About Us Image 1">
+        <img src="img/5.jpg" alt="About Us Image 2">
+        <img src="img/6.jpg" alt="About Us Image 3">
     </div>
     
     <footer>
