--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Epic Event Management - Home</title>
+    <title>Epic Event Management - Contact Us</title>
 </head>
 <body>
     <header>
@@ -19,10 +19,8 @@
     </header>
     
     <div class="container">
-        <h2>Welcome to Epic Event Management</h2>
-        <img src="img/1.jpg" alt="Event Image 1">
-        <img src="img/2.jpg" alt="Event Image 2">
-        <img src="img/3.jpg" alt="Event Image 3">
+        <h2>Contact Us</h2>
+        <img src="img/10.jpeg" alt="Contact Us Image">
     </div>
     
     <footer>
